	    reasons.

     - Mitsubishi Dye-Sublimation printers:

       Mitsubishi CP9810D/DW

	This model has been verified to work

       Mitsubishi CP3020D/DU/DE (EXPERIMENTAL)
       Mitsubishi CP3020DA/DAE  (EXPERIMENTAL)
       Mitsubishi CP9550D/DW    (EXPERIMENTAL)
       Mitsubishi CPD70D/DW     (EXPERIMENTAL)
       Mitsubishi CPD707D/DW    (EXPERIMENTAL)

	None of these models have been tested and confirmed to work 
	(or not), so feedback is welcome.

     - Kodak Dye-Sublimation printers:

       Kodak 1400
       Kodak 805
       Kodak 6800
       Kodak 6850
       Kodak 605

	These Kodak models require an intelligent CUPS backend, 
	which is bundled with Gutenprint.

       Kodak 8500 (EXPERIMENTAL)	
       Kodak 9810 (EXPERIMENTAL)

	Neither of these models have been tested and confirmed to work 
	(or not), so feedback is welcome.

     - Shinko/Sinfonia Dye-Sublimation printers:

       Shinko/Sinfonia CHC-S2145 (aka S2)

	The CHC-S2145 requires an intelligent CUPS backend, which is
	bundled with Gutenprint.

     - Sony Dye-Sublimation printers:

       Sony UP-DR150

	Support for the Sony UP-DR150 was greatly improved through the
	addition of an intelligent CUPS backend.

       Sony UP-DR200 (EXPERIMENTAL)

        Experimental support for the Sony UP-DR200 was added; it is as
	of yet untested.

  2) The following Canon printer models were not added, as they cannot
     currently be supported, even experimentally, owing to an as-yet
     unknown command format or other issues:

       Canon PIXMA iP1180
       Canon PIXMA iP1188
       Canon PIXMA iP1880
       Canon PIXMA iP1980
       Canon PIXMA iP2580
       Canon PIXMA iP2680
       Canon PIXMA PRO-10  *1
       Canon PIXMA PRO-100 *1

       *1: protocol is supported but inks used are not yet supported

  3) Corrected page dimensions for borderless printing with Canon
     printers.

  4) Added duplex support for the EPSON WorkForce 645.
